# ai-native-lending-mvp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/temporal/dynamicconfig/: development-sql.yaml
docs/: AI-Native-Lending-MVP-Design-Doc.md  AI-Native-Lending-MVP-PRD.md  WHAT-WE-BUILT.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/applicant/: ApplicantHome.tsx  ApplicantJourney.tsx  ApplicationStatus.tsx  DetailsForm.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AuditTrail.tsx  AuthPage.tsx  Layout.tsx  RoleLanding.tsx  StateGraph.tsx  ui.tsx
frontend/src/lender/: ApplicationDetail.tsx  ApplicationReview.tsx  PipelineList.tsx  PolicyView.tsx  resolve.ts
src/lending/: consent.py  policy.py  policy_view.py  settings.py  storage.py
src/lending/adapters/: __init__.py  bank_statement.py  base.py  bureau.py  demo_scenarios.py  esign.py  idempotency.py  llm_ocr.py  mock.py  notifications.py  ocr_mock.py  registry.py
src/lending/agent_runtime/: __init__.py  checkpointer.py  models.py  runtime.py
src/lending/agents/: __init__.py  decision_qa.py  doc_compare.py  document_intelligence.py  lead_qualification.py  (+3 more)
tests/: test_adapters.py  test_agent_runtime.py  test_audit.py  test_auth.py  test_bank_statement.py  test_bureau.py  test_cashflow.py  test_confidence.py  test_consent.py  test_decision.py  test_decision_qa.py  test_demo_scenarios.py  test_document_intelligence.py  test_esign_notify.py  test_explanation.py  test_governance.py  test_lead_qualification.py  test_llm_ocr.py  test_los.py  test_onboarding.py  test_origination_api.py  test_payslip.py  test_policy.py  test_pricing.py  test_rules_engine.py  test_runtime.py  test_scorecard.py  test_storage.py  test_underwriting.py  test_validators.py  test_workflow.py
(+44 files in other folders)
