[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lending"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "temporalio>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-asyncio>=0.23", "httpx>=0.27", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
